--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,8 @@ dependencies {
     implementation 'com.github.xuexiangjys.XUtil:xutil-core:2.0.0'
     implementation 'com.github.xuexiangjys.XOrmlite:xormlite-runtime:1.0.2'
     annotationProcessor 'com.github.xuexiangjys.XOrmlite:xormlite-compiler:1.0.2'
-
-    implementation 'com.jakewharton:butterknife:10.1.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+    implementation 'com.github.xuexiangjys:JPTabBar:1.0.1'
+    implementation 'com.readystatesoftware.systembartint:systembartint:1.0.3'
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
