--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     annotationProcessor 'com.github.xuexiangjys.XOrmlite:xormlite-compiler:1.0.2'
     implementation 'com.github.xuexiangjys:JPTabBar:1.0.1'
     implementation 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+    api 'com.squareup.retrofit2:converter-gson:2.4.0'
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
