--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'com.github.xuexiangjys:JPTabBar:1.0.1'
     implementation 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     api 'com.squareup.retrofit2:converter-gson:2.4.0'
+    //日历
+    api 'com.haibin:calendarview:3.7.1'
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
